Results/spots/m5.large/ca-central-1/3fae799be48098f41dea79cd4fbfab1f37edf812/secGroup.json
{
    "IpPermissionsEgress": [
        {
            "IpProtocol": "-1", 
            "PrefixListIds": [], 
            "IpRanges": [
                {
                    "CidrIp": "0.0.0.0/0"
                }
            ], 
            "UserIdGroupPairs": [], 
            "Ipv6Ranges": []
        }
    ], 
    "Description": "temporary sec group", 
    "IpPermissions": [
        {
            "PrefixListIds": [], 
            "FromPort": 22, 
            "IpRanges": [
                {
                    "CidrIp": "0.0.0.0/0"
                }
            ], 
            "ToPort": 22, 
            "IpProtocol": "tcp", 
            "UserIdGroupPairs": [], 
            "Ipv6Ranges": []
        }
    ], 
    "GroupName": "temp-time-mes", 
    "VpcId": "vpc-f650e79e", 
    "OwnerId": "530329064002", 
    "GroupId": "sg-0085a3ea735cd7b88"
}
